src/objects/User.object
<CustomObject>
    <fields>
        <fullName>ADP_EmpID__c</fullName>
        <label>ADP EmpID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AE_VM__c</fullName>
        <label>AE_VM</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Backdate__c</fullName>
        <description>Flag indicating whether the user will be allowed to backdate trades.</description>
        <label>Allow Backdate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ax_Sync__c</fullName>
        <description>Is account in ax, does an update fire synchronization to ax</description>
        <label>Ax_Sync</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_User_GUID__c</fullName>
        <description>CRM User GUID</description>
        <externalId>true</externalId>
        <label>CRM User GUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AE New Class</fullName>
                </value>
                <value>
                    <fullName>AE Regular</fullName>
                </value>
                <value>
                    <fullName>AE Senior</fullName>
                </value>
                <value>
                    <fullName>AE Team Leader Jr</fullName>
                </value>
                <value>
                    <fullName>AE Team Leader Sr</fullName>
                </value>
                <value>
                    <fullName>Client Services</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Management Team</fullName>
                </value>
                <value>
                    <fullName>IT Staff</fullName>
                </value>
                <value>
                    <fullName>Holding Base</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Daily_Minutes__c</fullName>
        <description>Show in Daily Minutes Reporting</description>
        <label>Daily Minutes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domain_Logon_Name__c</fullName>
        <label>Domain Logon Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FoxPro_Initials__c</fullName>
        <label>FoxPro Initials</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FoxPro_Name__c</fullName>
        <label>FoxPro Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <description>Hire/Term dates are needed for processing recycled phone#</description>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsAE__c</fullName>
        <label>IsAE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsTraining__c</fullName>
        <label>IsTraining</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Title_for_Reporting__c</fullName>
        <label>Job Title for Reporting</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title_on_Letters__c</fullName>
        <label>Job Title on Letters</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Route_Rank_Offset__c</fullName>
        <description>Offset that can be applied to ranking system in lead route procedure.  Weight&apos;s up or down to compensate for external factors in lead route algorithm.</description>
        <label>Lead Route Rank Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ME_Cert__c</fullName>
        <description>AE is certified to do business in Maine</description>
        <label>ME Cert?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Leads_Per_Day__c</fullName>
        <description>Max number of leads to route per day.  If all values are maxed out the system will reset and start over from zero.</description>
        <label>Max Leads Per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NV_Cert__c</fullName>
        <description>AE is certified to do business in Nevada</description>
        <label>NV Cert?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Out_of_Office__c</fullName>
        <description>Hide from Daily Performance display reports</description>
        <label>Out of Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PBQ_Ex__c</fullName>
        <description>Phone Extension for Confirmations</description>
        <label>PBQ Ex#</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBX_User_ID__c</fullName>
        <label>PBX User ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPQ_Ex__c</fullName>
        <label>PPQ Ex#</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Commissions__c</fullName>
        <description>Employee is paid commissions (used to identify commissionable for splits)</description>
        <label>Pay_Commissions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pilot_Number__c</fullName>
        <label>Pilot Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Lead_Type__c</fullName>
        <description>Preferred lead category (1 or 2)</description>
        <label>Preferred Lead Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requires_Approval__c</fullName>
        <description>Does this user require approval prior to submitting trades that qualify for approval rules</description>
        <label>Requires Approval?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requires_Confirmation__c</fullName>
        <description>Flag indicating whether this employee requires the confirmation process.</description>
        <label>Requires Confirmation?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>Hire/Term dates are needed for processing recycled phone#</description>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_del__c</fullName>
        <description>Base used for Testing and Training.</description>
        <label>Test</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Allow_Delegated_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box so that others in this Salesforce organization can send Adobe Sign agreements on behalf of this user.</description>
        <inlineHelpText>Check this box so that others in this Salesforce organization can send Adobe Sign agreements on behalf of this user.</inlineHelpText>
        <label>Adobe Sign Allow Sending As Other Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that the user&apos;s email address has been validated in Adobe Sign API.</description>
        <inlineHelpText>This checkbox indicates that the user&apos;s email address has been validated in Adobe Sign API.</inlineHelpText>
        <label>Adobe Sign Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>